<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="#ffffff"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:background="@color/colorPrimary"
        >

        <ImageView
            android:layout_width="189dp"
            android:layout_height="49dp"
            android:src="@drawable/logo_white"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"

        >

        <com.posfone.promote.posfone.Utils.TitilliumWebTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_a_pay"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textSize="@dimen/get_a_pay_text_size"
            android:textColor="@color/color_phone_number"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:paddingBottom="40dp"
            >

        <com.posfone.promote.posfone.Utils.TitilliumWebTextView
            android:id="@+id/btn_free_trial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_free_trial"
            android:gravity="center"
            android:textSize="@dimen/get_a_pay_text_size"
            android:background="@drawable/round_bg_textview"
            android:textColor="#ffffff"
            android:padding="@dimen/sign_in_button_padding"
            />
        <com.posfone.promote.posfone.Utils.TitilliumWebTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have"
            android:layout_marginTop="@dimen/margin_between_buttons"
            android:gravity="center"
            android:textSize="@dimen/get_a_pay_text_size"
            android:textColor="@color/color_phone_number"
            />

        <com.posfone.promote.posfone.Utils.TitilliumWebTextView
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="@dimen/margin_between_buttons"
            android:gravity="center"
            android:textSize="@dimen/get_a_pay_text_size"
            android:background="@drawable/round_bg_textview_border_highlight"
            android:textColor="@color/colorPrimary"
            android:padding="@dimen/sign_in_button_padding"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />

        </LinearLayout>

    </LinearLayout>

    <com.posfone.promote.posfone.Utils.TitilliumWebTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_use"
        android:gravity="center"
        android:textSize="@dimen/terms_of_use_text_size"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>