<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DeleteAccount">

    <!-- TODO: Update blank fragment layout -->
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction1"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/error_red"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction2"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/error_red"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction3"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/error_red"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/colorAccent"
        >

    </View>

    <com.posfone.promote.posfone.Utils.TitilliumWebTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Are You Sure ?"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:textColor="@color/error_red"
        android:textSize="25sp"/>

    <com.posfone.promote.posfone.Utils.TitilliumWebTextView
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:gravity="center"
        android:textSize="@dimen/get_a_pay_text_size"
        android:background="@drawable/round_bg_textview"
        android:textColor="#ffffff"
        android:padding="@dimen/sign_in_button_padding"
        android:layout_marginTop="35dp"/>

    <com.posfone.promote.posfone.Utils.TitilliumWebTextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donot_delete_account"
        android:gravity="center"
        android:textSize="@dimen/get_a_pay_text_size"
        android:background="@drawable/round_bg_red_textview"
        android:textColor="#ffffff"
        android:padding="@dimen/sign_in_button_padding"
        android:layout_marginTop="35dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:stretchColumns="1">

        <TableRow
            android:background="@color/colorAccent">
            <TextView

                android:text="REQUEST DATE"
                android:gravity="left"
                android:textColor="#ffff"
                android:padding="3dip" />
            <TextView
                android:text="LAST UPDATE"
                android:gravity="center"
                android:textColor="#ffff"
                android:padding="3dip" />
            <TextView
                android:text="STATUS"
                android:gravity="right"
                android:textColor="#ffff"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="REQUEST DATE"
                android:gravity="left"
                android:padding="3dip" />
            <TextView
                android:text="LAST UPDATE"
                android:gravity="center"
                android:padding="3dip" />
            <TextView
                android:text="STATUS"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>



    </TableLayout>
</LinearLayout>
</ScrollView>
</FrameLayout>