<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="#ffffff"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:background="@color/colorPrimary"
        >

        <include layout="@layout/app_bar_custom">

        </include>

        <ImageView
            android:layout_width="189dp"
            android:layout_height="49dp"
            android:src="@drawable/logo_white"
            android:layout_centerInParent="true"
            />

        <com.posfone.promote.posfone.Utils.TitilliumWebTextView
            android:id="@+id/txt_account_activation_messg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activate_link_text"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="@dimen/activate_link_text_size"
            android:textColor="#ffffff"
            android:visibility="gone"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:gravity="center_horizontal | bottom"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp"
        >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.posfone.promote.posfone.Utils.TitilliumWebEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/login_usename"
                android:singleLine="true"
                android:textSize="@dimen/input_text_size"
                android:text=""
                android:hint="Email" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/password_see"
            android:layout_marginTop="@dimen/margin_between_buttons_sign_in"
            >

            <com.posfone.promote.posfone.Utils.TitilliumWebEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:drawablePadding="5dp"
                android:text=""
                android:textSize="@dimen/input_text_size"
                android:hint="@string/hint_password" />
        </android.support.design.widget.TextInputLayout>


        <com.posfone.promote.posfone.Utils.TitilliumWebTextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pwd"
            android:layout_marginTop="@dimen/margin_between_buttons_sign_in"
            android:gravity="left"
            android:textSize="@dimen/forgot_pwd_text_size"
            android:textColor="@color/color_phone_number"
            />



        <com.posfone.promote.posfone.Utils.TitilliumWebTextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="@dimen/get_a_pay_text_size"
            android:background="@drawable/round_bg_textview"
            android:textColor="#ffffff"
            android:padding="@dimen/sign_in_button_padding"
            android:layout_marginTop="@dimen/margin_between_buttons_sign_in"
            />
        <com.posfone.promote.posfone.Utils.TitilliumWebTextView
            android:id="@+id/txt_enroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_have"
            android:layout_marginTop="@dimen/margin_between_buttons_sign_in"
            android:gravity="center"
            android:textSize="@dimen/forgot_pwd_text_size"
            android:textColor="@color/color_phone_number"
            />

    </LinearLayout>

    <com.posfone.promote.posfone.Utils.TitilliumWebTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/terms_of_service"
        android:text="@string/terms_of_use"
        android:gravity="center"
        android:textSize="@dimen/terms_of_use_text_size"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>